@@ -3,11 +3,12 @@ package br.com.salao.entidades.evento.core.model.dto;
 import java.io.Serializable;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonFormat;
 
-import br.com.salao.entidades.cliente.core.model.Cliente;
 import br.com.salao.entidades.cliente.core.model.dto.ClienteDTO;
+import br.com.salao.entidades.cliente.core.model.Cliente;
 import br.com.salao.entidades.evento.core.model.Evento;
 import br.com.salao.entidades.servico.core.model.*;
 import lombok.*;
@@ -31,7 +32,8 @@ public class EventoDTO implements Serializable {
 		public EventoDTO(Evento evento, Cliente ganhador, List<Cliente> participantes) {
 			if(evento.getGanhador() != null) {
 				this.ganhador = new ClienteDTO(evento.getGanhador());
-				this.participantes = evento.getParticipantes().stream().map(x -> new ClienteDTO(x)).toList();
+				this.participantes = evento.getParticipantes().stream().map(x -> new ClienteDTO(x))
+						.collect(Collectors.toList());
 			}
 			id = evento.getId();
 			nome = evento.getNome();
